@@ -8,6 +8,10 @@
 #ifndef __OBDCONVERTFUNCTIONS_H
 #define __OBDCONVERTFUNCTIONS_H
 
+#ifdef __cplusplus
+extern "C" {
+#endif //  __cplusplus
+
 // http://en.wikipedia.org/wiki/Table_of_OBD-II_Codes
 
 /// All obd conversion functions adhere to this
@@ -52,6 +56,10 @@ float obdConvert_4D    (unsigned int A, unsigned int B, unsigned int C, unsigned
 float obdConvert_4E    (unsigned int A, unsigned int B, unsigned int C, unsigned int D);
 float obdConvert_52    (unsigned int A, unsigned int B, unsigned int C, unsigned int D);
 
+
+#ifdef __cplusplus
+}
+#endif //  __cplusplus
 
 
 #endif // __OBDCONVERTFUNCTIONS_H
